--- a/translations/pt/LC_MESSAGES/messages.po
+++ b/translations/pt/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  1.0\n"
 "Report-Msgid-Bugs-To: eder.porto@wmnobrasil.com\n"
-"POT-Creation-Date: 2021-04-01 20:43-0300\n"
+"POT-Creation-Date: 2021-04-09 17:37-0300\n"
 "PO-Revision-Date: 2021-04-01 20:43-0300\n"
 "Last-Translator: Éder Porto <eder.porto@wmnobrasil.com>\n"
 "Language: pt\n"
@@ -19,44 +19,40 @@ msgstr ""
 "Generated-By: Babel 2.9.0\n"
 
 #: templates/authority.html:9 templates/authority.html:14
-#: templates/create.html:74 templates/reconciliate.html:23
+#: templates/create.html:82 templates/reconciliate.html:23
 #: templates/unknown.html:74
 msgid "Authority"
 msgstr "Autoridade"
 
-#: templates/authority.html:29 templates/create.html:36
-#: templates/create.html:66 templates/create.html:88 templates/create.html:110
+#: templates/authority.html:29 templates/create.html:40
+#: templates/create.html:74 templates/create.html:100 templates/create.html:126
 #: templates/locality.html:29 templates/subject.html:29 templates/type.html:29
 #: templates/unknown.html:36 templates/unknown.html:66
 #: templates/unknown.html:88 templates/unknown.html:110
 msgid "Reconcile"
 msgstr "Reconciliar"
 
-#: templates/authority.html:41 templates/create.html:181
+#: templates/authority.html:41 templates/create.html:197
 #: templates/locality.html:41 templates/subject.html:41 templates/type.html:41
 #: templates/unknown.html:133
 msgid "Reconciliation"
 msgstr "Reconciliação"
 
-#: templates/authority.html:46 templates/create.html:187
+#: templates/authority.html:46 templates/create.html:203
 #: templates/locality.html:47 templates/subject.html:46 templates/type.html:46
 #: templates/unknown.html:138
-msgid ""
-"Search for a Wikidata entity corresponding to the term you are trying to "
-"reconcile."
-msgstr ""
-"Procure uma entidade Wikidata correspondente ao termo que você está "
-"tentando reconciliar."
+msgid "Search for a Wikidata entity corresponding to the term you are trying to reconcile."
+msgstr "Procure uma entidade Wikidata correspondente ao termo que você está tentando reconciliar."
 
-#: templates/authority.html:47 templates/create.html:188
+#: templates/authority.html:47 templates/create.html:204
 #: templates/locality.html:48 templates/subject.html:47 templates/type.html:47
 #: templates/unknown.html:139
 msgid "If no corresponding Wikidata entity exists yet, please check the option"
 msgstr "Se nenhuma entidade Wikidata correspondente existir ainda, marque a opção"
 
 #: templates/authority.html:48 templates/authority.html:84
-#: templates/authority.html:111 templates/create.html:189
-#: templates/create.html:226 templates/create.html:253
+#: templates/authority.html:111 templates/create.html:205
+#: templates/create.html:244 templates/create.html:271
 #: templates/locality.html:49 templates/locality.html:85
 #: templates/locality.html:112 templates/subject.html:48
 #: templates/subject.html:84 templates/subject.html:111 templates/type.html:48
@@ -65,45 +61,46 @@ msgstr "Se nenhuma entidade Wikidata correspondente existir ainda, marque a opç
 msgid "Not found/nonexistent"
 msgstr "Não encontrado/não existente"
 
-#: templates/authority.html:54 templates/create.html:195
+#: templates/authority.html:54 templates/create.html:211
 #: templates/locality.html:55 templates/subject.html:54 templates/type.html:54
 #: templates/unknown.html:146
-msgid "Search for terms that can represent "
-msgstr "Procure por termos que podem representar "
+msgid "Search for items that can represent "
+msgstr "Procure por itens que podem representar "
 
-#: templates/authority.html:57 templates/create.html:198
+#: templates/authority.html:57 templates/create.html:214
 #: templates/locality.html:58 templates/subject.html:57 templates/type.html:57
 #: templates/unknown.html:149
 msgid "Search"
 msgstr "Procure"
 
-#: templates/authority.html:60 templates/create.html:201
+#: templates/authority.html:60 templates/create.html:217
 #: templates/locality.html:61 templates/subject.html:60 templates/type.html:60
 #: templates/unknown.html:152
 msgid "Select an option:"
 msgstr "Selecione uma opção:"
 
-#: templates/authority.html:66 templates/create.html:164
-#: templates/create.html:207 templates/locality.html:67
+#: templates/authority.html:66 templates/create.html:180
+#: templates/create.html:223 templates/locality.html:67
 #: templates/subject.html:66 templates/type.html:66 templates/unknown.html:158
 msgid "Cancel"
 msgstr "Cancelar"
 
-#: templates/authority.html:68 templates/create.html:209
+#: templates/authority.html:68 templates/create.html:225
 #: templates/locality.html:69 templates/subject.html:68 templates/type.html:68
 #: templates/unknown.html:160
 msgid "Add statement"
 msgstr "Adicionar declaração"
 
-#: templates/authority.html:123 templates/create.html:265
+#: templates/authority.html:123 templates/create.html:283
 #: templates/locality.html:124 templates/subject.html:123
 #: templates/type.html:123 templates/unknown.html:215
 msgid "Select one element"
 msgstr "Selecione um elemento"
 
-#: templates/authority.html:145 templates/create.html:287
-#: templates/locality.html:146 templates/subject.html:145
-#: templates/type.html:145 templates/unknown.html:237
+#: templates/authority.html:145 templates/create.html:305
+#: templates/create.html:326 templates/locality.html:146
+#: templates/subject.html:145 templates/type.html:145
+#: templates/unknown.html:237
 msgid "Statement inserted successfully!"
 msgstr "Declaração inserida com sucesso!"
 
@@ -111,26 +108,25 @@ msgstr "Declaração inserida com sucesso!"
 msgid "Homepage"
 msgstr "Página inicial"
 
-#: templates/base.html:20 templates/base.html:53
+#: templates/base.html:20 templates/base.html:56 templates/home.html:27
 msgid "WikiProject Brazilian Laws"
 msgstr "WikiProjeto Leis Brasileiras"
 
-#: templates/base.html:40 templates/base.html:42
+#: templates/base.html:40 templates/base.html:43 templates/error.html:17
+#: templates/error.html:20 templates/home.html:16 templates/home.html:19
 msgid "Logotipo WikiProject Brazilian Laws"
 msgstr "Logotipo WikiProjeto Leis Brasileiras"
 
-#: templates/base.html:53
+#: templates/base.html:55 templates/home.html:26
 msgid "WikiProject Brazilian Laws project"
 msgstr "projeto WikiProjeto Leis Brasileiras"
 
-#: templates/base.html:54
+#: templates/base.html:57
 #, python-format
-msgid ""
-"<i>WikiProject Brazilian Laws Legislation Importer</i> is an application "
+msgid "<i>WikiProject Brazilian Laws Legislation Importer</i> is an application "
 "developed in the context of the  <i><b>%(projeto)s</b></i> in Wikidata, "
 "with support of <b>WikiCite</b>."
-msgstr ""
-"<i>Importador de Legislação do WikiProjeto Leis Brasileiras</i> é um "
+msgstr "<i>Importador de Legislação do WikiProjeto Leis Brasileiras</i> é um "
 "aplicativo desenvolvido no contexto dos <i><b>%(projeto)s</b></i> no "
 "Wikidata, com suporte do <b>WikiCite</b>."
 
@@ -147,144 +143,161 @@ msgstr "Título"
 msgid "Document type"
 msgstr "Tipo de documento"
 
-#: templates/create.html:44 templates/unknown.html:44
+#: templates/create.html:48 templates/unknown.html:44
 msgid "Date"
 msgstr "Data"
 
-#: templates/create.html:48 templates/unknown.html:48
+#: templates/create.html:52 templates/unknown.html:48
 msgid "URN"
 msgstr "URN"
 
-#: templates/create.html:52 templates/locality.html:9
+#: templates/create.html:56 templates/locality.html:9
 #: templates/locality.html:14 templates/reconciliate.html:28
 #: templates/unknown.html:52
 msgid "Locality"
 msgstr "Localidade"
 
-#: templates/create.html:96 templates/reconciliate.html:38
+#: templates/create.html:108 templates/reconciliate.html:38
 #: templates/subject.html:9 templates/subject.html:14 templates/unknown.html:96
 msgid "Subject"
 msgstr "Assunto"
 
-#: templates/create.html:118
+#: templates/create.html:134
 msgid "Digest"
 msgstr "Ementa"
 
-#: templates/create.html:127
+#: templates/create.html:143
 msgid "UPLOAD TO WIKIDATA"
 msgstr "CARREGAR PARA O WIKIDATA"
 
-#: templates/create.html:134
+#: templates/create.html:149
 msgid "This item doesn't exists yet in Wikidata."
 msgstr "Este item ainda não existe no Wikidata."
 
-#: templates/create.html:136
+#: templates/create.html:152
 #, python-format
-msgid ""
-"This item <a target='_blank' href='https://www.wikidata.org/wiki/%(qid)s'"
+msgid "This item <a target='_blank' href='https://www.wikidata.org/wiki/%(qid)s'"
 " title='Item already exists'>already exists in Wikidata.</a>"
-msgstr ""
-"Este item <a target='_blank' href='https://www.wikidata.org/wiki/%(qid)s'"
+msgstr "Este item <a target='_blank' href='https://www.wikidata.org/wiki/%(qid)s'"
 " title='Item já existe'>já existe no Wikidata.</a>"
 
-#: templates/create.html:138
+#: templates/create.html:154
 #, python-format
-msgid ""
-"Use <b>{{Cite Q|%(qid)s}}</b> to cite this item as reference on the "
+msgid "Use <b>{{Cite Q|%(qid)s}}</b> to cite this item as reference on the "
 "English Wikipedia."
-msgstr ""
-"Use <b>{{Citar Q|%(qid)s}}</b> para citar este item como referência na "
+msgstr "Use <b>{{Citar Q|%(qid)s}}</b> para citar este item como referência na "
 "Wikipédia em Português."
 
-#: templates/create.html:141
-msgid ""
-"Some parameters might not be fully identified and thus will be presented "
-"in red and with a \"Reconcile\" tag at the table on the side."
-msgstr ""
-"Alguns parâmetros podem não estar totalmente identificados e, portanto, "
-"serão apresentados em vermelho e com a etiqueta \"Reconciliar\" na tabela"
-" ao lado."
+#: templates/create.html:157
+msgid "<b>Some parameters might not be fully identified</b> and thus will"
+" be presented in red and with a \"Reconcile\" tag at the table."
+msgstr "<b>Alguns parâmetros podem não estar totalmente identificados</b> e, "
+"portanto, serão apresentados em vermelho e com a etiqueta \"Reconciliar\" na tabela."
 
-#: templates/create.html:142
-msgid ""
-"The parameters are presented in a mixture of <i>Quick Statements</i> and "
-"the <i>LeXML API</i> formats."
-msgstr ""
-"Os parâmetros são apresentados em um misto de formato <i>Quick "
-"Statements</i> e formato da <i>API do LeXML</i>."
+#: templates/create.html:158
+msgid "<b>To <i>wikidatify</i> the metadata</b>, click on \"Reconcile\" and "
+"search for an equivalent Wikidata entity. If you can't find it, select "
+"\"Not found/nonexistent\"."
+msgstr "<b>Para <i>wikidatificar</i> os metadados</b>, clique em \"Reconciliar\" e "
+"procure por um item Wikidata equivalente. Se você não conseguir encontrá-lo, selecione "
+"\"Não encontrado/não existente\"."
 
-#: templates/create.html:143
-msgid ""
-"To <i>wikidatify</i> the metadata, click on \"Reconcile\" and search for "
-"the entity. If you can't find it, select \"Not found/nonexistent\"."
-msgstr ""
-"Para <i>wikidatificar</i> os metadados, clique em \"Reconciliar\" e "
-"procure pela entidade. Se você não conseguir encontrá-la, selecione \"Não"
-" encontrado/não existente\"."
+#: templates/create.html:159
+msgid "<b>To edit any reconciled metadata</b>, click on its link and "
+"search for a new entity value for the metadata."
+msgstr "<b>Para editar qualquer metadado reconciliado</b>, click em seu link e "
+"procure por um novo item Wikidata para este metadado."
 
-#: templates/create.html:144
-msgid ""
-"To create or update an item using the Quick Statements tool, click in "
-"\"Upload to Wikidata\"."
-msgstr ""
-"Para criar ou atualizar um item usando a ferramenta Quick Statements, "
-"clique em \"Carregar para o Wikidata\"."
+#: templates/create.html:160
+msgid "<b>To create or update an item</b>, click in \"Upload to Wikidata\"."
+msgstr "<b>Para criar ou atualizar um item</b>, clique em \"Carregar para o Wikidata\"."
 
-#: templates/create.html:152
+#: templates/create.html:168
 msgid "Authenticate"
 msgstr "Autenticar"
 
-#: templates/create.html:158
+#: templates/create.html:174
 msgid "In order to reconcile a metadata, you need to log in."
 msgstr "Para reconciliar um metadado, você precisa realizar autenticar-se."
 
-#: templates/create.html:166 templates/create.html:170
+#: templates/create.html:182 templates/create.html:186
 msgid "Log in"
 msgstr "Autenticar-se"
 
-#: templates/home.html:15
+#: templates/error.html:3 templates/error.html:31
+msgid "Something went wrong!"
+msgstr "Algo deu errado!"
+
+#: templates/error.html:40
+msgid "REPORT ERROR"
+msgstr "REPORTAR ERRO"
+
+#: templates/error.html:50
+msgid "BACK TO HOMEPAGE"
+msgstr "VOLTAR À PÁGINA INICIAL"
+
+#: templates/home.html:23
 msgid "Welcome to the <i>WikiProject Brazilian Laws Legislation Importer</i>"
-msgstr ""
-"Bem-vindo(a) ao <i>Importador de Legislação do WikiProjeto Leis "
-"Brasileiras</i>"
+msgstr "Bem-vindo(a) ao <i>Importador de Legislação do WikiProjeto Leis Brasileiras</i>"
 
-#: templates/home.html:18
-msgid ""
-"This application was developed to facilitate the process of importing "
-"metadata of Brazilian legislation into <b><i>Wikidata</i></b>."
-msgstr ""
-"Esta aplicação foi desenvolvida para facilitar o processo de importação "
-"de metadados de legislações brasileiras para o <b><i>Wikidata</i></b>."
+#: templates/home.html:28
+#, python-format
+msgid "This application was developed in the context of the "
+"<i><b>%(projeto)s</b></i> with support of <b>WikiCite</b> to facilitate "
+"the process of importing metadata of Brazilian legislation into <b><i><a "
+"target=\"_blank\" href=\"https://www.wikidata.org/\">Wikidata</a></i></b>."
+msgstr "Esta aplicação foi desenvolvida no contexto do "
+"<i><b>%(projeto)s</b></i> com apoio do <b>WikiCite</b> para facilitar "
+"o processo de importação de legislação Brasileira para o <b><i><a "
+"target=\"_blank\" href=\"https://www.wikidata.org/\">Wikidata</a></i></b>."
 
-#: templates/home.html:22
-msgid ""
-"You can create a new legislation item by inserting a <i><a "
+#: templates/home.html:34
+msgid "To create an item or reconciliate metadata in this tool, you need to be "
+"authenticated using your Wikimedia account. To do that, click on "
+"\"Authenticate\" on the menu at the top."
+msgstr "Para criar um item ou reconciliar metadados nesta ferramenta, você precisa "
+"autenticar-se usando a sua conta Wikimedia. Para fazer isso, clique em "
+"\"Autenticar-se"
+
+#: templates/home.html:38
+msgid "You can begin the process of creating a new item by inserting a <i><a "
 "target=\"_blank\" href=\"https://www.lexml.gov.br/\">LeXML</a></i> URL "
-"into the field bellow:"
-msgstr ""
-"Você pode criar um novo item de legislação inserindo uma URL do <i><a "
-"target=\"_blank\" href=\"https://www.lexml.gov.br/\">LeXML</a></i> no "
+"into the field bellow."
+msgstr "Você pode começar o processo de criação de um novo item inserindo uma URL do "
+"<i><a target=\"_blank\" href=\"https://www.lexml.gov.br/\">LeXML</a></i> no "
 "campo abaixo:"
 
-#: templates/home.html:24
+#: templates/home.html:41
+msgid "You can also click on \"Other tasks\" on the top to identify or create "
+"metadata that were not identified by other users."
+msgstr "Você também pode clicar em \"Outras tarefas\" no topo para identificar ou "
+"criar metadados que não foram identificador por outros(as) usuários(as)."
+
+#: templates/home.html:44
 msgid "Paste the URL"
 msgstr "Cole a URL"
 
-#: templates/home.html:25
+#: templates/home.html:46
 msgid "Submit"
 msgstr "Submeter"
 
-#: templates/reconciliate.html:9 templates/topnavbar.html:3
+#: templates/reconciliate.html:9
 msgid "Reconciliate"
 msgstr "Reconciliar"
 
 #: templates/reconciliate.html:15
-msgid ""
-"Select one of the categories of metadata to reconciliate unknown or "
+msgid "Select one of the categories of metadata to reconciliate unknown or "
 "nonexistent values."
-msgstr ""
-"Selecione uma das categorias de metadados para reconciliar valores "
+msgstr "Selecione uma das categorias de metadados para reconciliar valores "
 "desconhecidos ou inexistentes."
+
+#: templates/topnavbar.html:3
+msgid "Other tasks"
+msgstr "Outras tarefas"
+
+#: templates/topnavbar.html:14
+msgid "Authenticate"
+msgstr "Autenticar-se"
 
 #: templates/topnavbar.html:16
 msgid "Menu"
@@ -301,4 +314,3 @@ msgstr "Desconhecido"
 #: templates/unknown.html:118
 msgid "Description"
 msgstr "Descrição"
-
