Translating some messages

--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2021-04-10 02:09-0300\n"
+"POT-Creation-Date: 2021-04-10 04:26-0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -57,7 +57,8 @@ msgstr ""
 msgid ""
 "<i>WikiProject Brazilian Laws Legislation Importer</i> is an application "
 "developed in the context of the  <i><b>%(projeto)s</b></i> in Wikidata, "
-"with support of <b>WikiCite</b>."
+"realized by the <b>Wiki Movimento Brasil</b>, with support of "
+"<b>WikiCite</b>."
 msgstr ""
 
 #: templates/create.html:9
@@ -164,9 +165,9 @@ msgstr ""
 #, python-format
 msgid ""
 "This application was developed in the context of the "
-"<i><b>%(projeto)s</b></i> with support of <b>WikiCite</b> to facilitate "
-"the process of importing metadata of Brazilian legislation into <b><i><a "
-"target=\"_blank\" "
+"<i><b>%(projeto)s</b></i>, realized by the <b>Wiki Movimento Brasil</b>, "
+"with support of <b>WikiCite</b> to facilitate the process of importing "
+"metadata of Brazilian legislation into <b><i><a target=\"_blank\" "
 "href=\"https://www.wikidata.org/\">Wikidata</a></i></b>."
 msgstr ""
 
